<resources>
    <string name="app_name">DeliveryProject</string>
    <string name="email">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="Registration">Регистрация</string>
    <string name="Auth">Авторизация</string>
    <string name="firstName">Фамилия</string>
    <string name="Name">Имя</string>
    <string name="lastName">Отчество</string>
    <string name="Shops">Магазины</string>
    <string name="Restaurants">Рестораны</string>
    <string name="Cart">Корзина</string>
    <string name="Search">Поиск</string>
    <string name="Profile">Профиль</string>
    <string name="buy">Оформить заказ</string>
    <string name="total_sum">Итог:</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="new_address">Новый адрес</string>
    <string name="address">Адрес</string>
    <string name="ok">Ok</string>
    <string name="Positions">Позиции</string>
</resources>