<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Auth"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <EditText
        android:id="@+id/a_auth_login"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/grey_rect"
        android:paddingStart="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:text="user@gmail.com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/a_auth_password"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/grey_rect"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:text="123456"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_auth_login"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/a_auth_b_enter"
        android:layout_width="119dp"
        android:layout_height="47dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="148dp"
        style="@style/DefaultButton"
        android:text="@string/enter"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_auth_password"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/a_auth_tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Registration"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textColor="@color/middle_violet"
        app:layout_constraintEnd_toEndOf="@+id/a_auth_password"
        app:layout_constraintTop_toBottomOf="@+id/a_auth_password" />


</androidx.constraintlayout.widget.ConstraintLayout>