<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="128dp"
      android:layout_marginEnd="131dp"
      android:text="@string/Registration"
      android:textSize="25sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.141" />

  <EditText
      android:id="@+id/a_reg_firstName"
      android:layout_width="270dp"
      android:layout_height="44dp"
      android:layout_marginStart="88dp"
      android:layout_marginTop="50dp"
      android:layout_marginEnd="89dp"
      android:paddingStart="10dp"
      android:background="@drawable/grey_rect"
      android:ems="10"
      android:hint="@string/firstName"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      tools:ignore="TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/a_reg_secondName"
      android:layout_width="270dp"
      android:layout_height="44dp"
      android:layout_marginStart="88dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="89dp"
      android:paddingStart="10dp"
      android:background="@drawable/grey_rect"
      android:ems="10"
      android:hint="@string/Name"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/a_reg_firstName"
      tools:ignore="TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/a_reg_address"
      android:layout_width="270dp"
      android:layout_height="48dp"
      android:layout_marginStart="90dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="87dp"
      android:paddingStart="10dp"
      android:background="@drawable/grey_rect"
      android:ems="10"
      android:hint="@string/address"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/a_reg_secondName" />

  <EditText
      android:id="@+id/a_reg_login"
      android:layout_width="270dp"
      android:layout_height="44dp"
      android:layout_marginStart="91dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="86dp"
      android:paddingStart="10dp"
      android:background="@drawable/grey_rect"
      android:ems="10"
      android:hint="Email"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/a_reg_address"
      tools:ignore="TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/a_reg_password"
      android:layout_width="270dp"
      android:layout_height="44dp"
      android:layout_marginStart="90dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="87dp"
      android:paddingStart="10dp"
      android:background="@drawable/grey_rect"
      android:ems="10"
      android:hint="Пароль (от 6 символов)"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/a_reg_login"
      tools:ignore="TouchTargetSizeCheck" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/a_reg_b_registration"
      android:layout_width="230dp"
      android:layout_height="47dp"
      android:layout_marginStart="116dp"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="119dp"
      style="@style/DefaultButton"
      android:text="Зарегистрироваться"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/a_reg_password"
      tools:ignore="TouchTargetSizeCheck" />

  <TextView
      android:id="@+id/a_reg_tv_auth"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/Auth"
      android:textStyle="bold"
      android:textSize="13sp"
      android:textColor="@color/middle_violet"
      app:layout_constraintEnd_toEndOf="@+id/a_reg_password"
      app:layout_constraintTop_toBottomOf="@+id/a_reg_password" />


</androidx.constraintlayout.widget.ConstraintLayout>